# iptables-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: ErrorExplanation.ts
src-tauri/data/: service-templates.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: expire-rule.sh  revert.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/activity/: monitor.rs
src-tauri/src/export/: format.rs
src-tauri/src/host/: detect.rs  mod.rs  persist.rs
src-tauri/src/ipc/: commands.rs  errors.rs  events.rs  mod.rs
src-tauri/src/ipc/commands/: activity.rs  analysis.rs  creds.rs  helpers.rs  host.rs  mod.rs  (+5 more)
src-tauri/src/ipset/: manager.rs
src-tauri/src/iptables/: conflict.rs  diff.rs  duplicate.rs  error_catalog.rs  explain.rs  generator.rs  ipset_suggest.rs  jump_rules.rs  live_trace.rs  lock.rs  mod.rs  multi_apply.rs  parser.rs  system_detect.rs  tracer.rs  types.rs
src-tauri/src/safety/: hmac.rs  lockout.rs  mod.rs  timer.rs
src-tauri/src/snapshot/: manager.rs
src-tauri/src/ssh/: command.rs  credential.rs  executor.rs  mod.rs  pool.rs  provision.rs  session.rs
src-tauri/src/sysctl/: mod.rs
src-tauri/src/temporary/: scheduler.rs
src-tauri/tests/: contract_tests.rs  diff_test.rs  explain_test.rs  generator_test.rs  jump_rules_test.rs  parser_test.rs
src-tauri/tests/fixtures/: clean_server.txt  complex_mixed.txt  docker_host.txt  fail2ban_active.txt  iptables_nft.txt  k8s_node.txt  wg_quick.txt  with_counters.txt
(+182 files in other folders)
