[package]
name = "traffic-rules"
version = "0.5.1"
edition = "2021"
description = "Desktop iptables manager built with Tauri"

[lib]
name = "traffic_rules_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "traffic-rules"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
openssh = "0.11"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
ring = "0.17"
winnow = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
shell-words = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
tokio-util = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
